# PC-Final

./: CMakeLists.txt
input/data/: Black.txt  Red.txt  White.txt  Yellow.txt  blue.txt  cyan.txt  green.txt  magenta.txt
src/: cuda.cu  cuda_interpolation.cu  cuda_interpolation.cuh  main.cpp  openmp.cpp  single_threaded.cpp
